--- a/dash/style.css
+++ b/dash/style.css
@@ -285,15 +285,15 @@ nav {
 }
 
 .story2 {
-    background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url('/assets/status-2.png');
+    background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url('/assets/images.jpeg');
 }
 
 .story3 {
-    background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url('/assets/status-3.png');
+    background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url('/assets/download.jpeg');
 }
 
 .story4 {
-    background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url('/assets/status-4.png');
+    background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url('/assets/photo-1494790108377-be9c29b29330.jpeg');
 }
 
 .story5 {
@@ -474,4 +474,339 @@ nav {
 
 .setting-inner-menu {
     padding: 1.25rem;
+}
+
+/* Profile Page */
+
+.profile-container {
+    padding: 1.25rem 15%;
+    color: #626262;
+}
+
+.cover-img {
+    width: 100%;
+    border-radius: 0.375rem;
+    margin-bottom: 0.875rem;
+}
+
+.profile-details {
+    display: flex;
+    align-items: flex-start;
+    border-radius: 0.25rem;
+    justify-content: space-between;
+    padding: 1.25rem;
+    background: #fff;
+}
+
+.pd-row {
+    display: flex;
+    align-items: flex-start;
+}
+
+.pd-img {
+    width: 6rem;
+    border-radius: 0.4rem;
+    margin-right: 1.25rem;
+
+}
+
+.pd-row div h3 {
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+.pd-row div p {
+    font-weight: 500;
+    font-size: 0.813rem;
+}
+
+.pd-row div img {
+    width: 1.5rem;
+    border-radius: 50%;
+    margin-top: 0.75rem;
+}
+
+.pd-right button {
+    display: inline-flex;
+    border: 0;
+    outline: 0;
+    padding: 0.375rem 0.625rem;
+    align-items: center;
+    margin-left: 0.625rem;
+    border-radius: 0.188rem;
+    cursor: pointer;
+    color: #fff;
+    background: #1876f2;
+
+}
+
+.pd-right button img {
+    height: 0.9rem;
+    margin-right: 0.625rem;
+}
+
+.pd-right button:first-child {
+    background: #e4e6eb;
+    color: #000;
+}
+
+.pd-right {
+    text-align: right;
+}
+
+.pd-right a {
+    display: inline-flex;
+    padding: 0.75rem;
+    background: #e4e6eb;
+    margin-top: 1.8rem;
+    border-radius: 0.188rem;
+}
+
+.pd-right a img {
+    width: 1.25rem;
+}
+
+.profile-info {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 1.25rem;
+}
+
+.info-col {
+    flex-basis: 33%;
+}
+
+.post-col {
+    flex-basis: 65%;
+}
+
+.profile-intro {
+    background: #fff;
+    padding: 1.25rem;
+    margin-bottom: 1.25rem;
+    border-radius: 0.25rem;
+}
+
+.profile-intro h3 {
+    font-weight: 600;
+}
+
+.intro-text {
+    text-align: center;
+    font-size: 0.9rem;
+    margin: 0.625rem;
+}
+
+.intro-text img {
+    width: 1rem;
+    margin-bottom: -0.188rem;
+}
+
+.profile-intro hr {
+    border: 0;
+    height: 0.063rem;
+    margin: 1.5rem 0;
+    background: #ccc;
+
+}
+
+.profile-intro ul li {
+    display: flex;
+    list-style: none;
+    font-size: 1rem;
+    margin: 0.9rem 0;
+    align-items: center;
+
+}
+
+.profile-intro ul li img {
+    width: 1.626rem;
+    margin-right: 0.625rem;
+
+}
+
+.title-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.title-box a {
+    text-decoration: none;
+    color: #1876f2;
+    font-size: 0.8rem;
+}
+
+.photo-box {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-gap: 0.625rem;
+    margin-top: 1rem;
+}
+
+.photo-box div img {
+    width: 100%;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*--------------------------------- MEDIA QUERY ----------------------------------------  */
+
+@media (max-width:900px) {
+    .left-sideBar {
+        display: none;
+
+    }
+
+    .right-sideBar {
+        display: none;
+    }
+
+    .nav {
+        flex-wrap: wrap;
+    }
+
+    .search-box {
+        display: none;
+    }
+
+    .logo {
+        width: 6.875rem;
+        margin-right: 1.25rem;
+    }
+
+    .nav-left ul li img {
+        width: 1.25rem;
+        margin: 0 0.5rem;
+    }
+
+    .nav-user-icon img {
+        width: 1.875rem;
+    }
+
+    .nav-user-icon {
+        margin-left: 0;
+    }
+
+    .add-post-links {
+        flex-wrap: wrap;
+    }
+
+    .main-sideBar {
+        flex-basis: 100%;
+    }
+
+    .story img {
+        width: 1.25rem;
+        border-width: 0.188rem;
+    }
+
+    .story p {
+        font-size: 0.625rem;
+    }
+
+    .story.story1 img {
+        width: 1.563rem;
+        bottom: 1.875rem;
+    }
+
+    .add-post-links a {
+        margin-right: 0.75rem;
+        font-size: 0.563rem;
+    }
+
+    .add-post-links a img {
+        width: 1rem;
+        margin-right: 0.313rem;
+    }
+
+    .post-input-container {
+        padding-left: 0;
+    }
+}
+
+@media (max-width:900px) {
+    .profile-container {
+        padding: 1.25rem 5%;
+    }
+
+    .profile-details {
+        flex-wrap: wrap;
+    }
+
+    .pd-right {
+        text-align: left;
+        margin-top: 0.9rem;
+    }
+
+    .pd-right button {
+        margin-left: 0;
+        margin-right: 0.625rem;
+    }
+
+    .pd-row div h3 {
+        font-size: 1rem;
+    }
+
+    .profile-info {
+        flex-wrap: wrap;
+    }
+
+    .info-col .post-col {
+        flex-basis: 100%;
+    }
 }
